# wt-manager

./: .gitignore  Makefile  QWEN.md  README.md  main.spec  pyproject.toml
.kiro/specs/git-worktree-manager/: design.md  requirements.md  tasks.md
.kiro/specs/ui-modernization/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
assets/: icon.icns
src/wt_manager/: __init__.py  __main__.py  app.py
src/wt_manager/controllers/: __init__.py  application_controller.py
src/wt_manager/models/: __init__.py  command_execution.py  config.py  project.py  worktree.py
src/wt_manager/services/: __init__.py  async_git_service.py  base.py  command_manager.py  command_service.py  config_manager.py  git_service.py  message_service.py  project_service.py  validation_service.py  worktree_service.py
src/wt_manager/ui/: __init__.py  command_dialog.py  command_output_widget.py  error_dialogs.py  main_window.py  preferences_dialog.py  progress_manager.py  project_action_dialog.py  project_panel.py  status_widgets.py  worktree_panel.py
src/wt_manager/utils/: error_handler.py  exceptions.py  logging_config.py  path_manager.py
tests/: test_command_execution_ui.py  test_command_manager.py  test_command_service.py  test_config.py  test_error_feedback_integration.py  test_error_handling.py  test_git_service.py  test_init.py  test_models.py  test_path_manager.py  test_progress_feedback.py  test_project_panel.py  test_project_service.py  test_validation_service.py  test_worktree_panel.py  test_worktree_service.py
